Transferring a file P2P  using the data channel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,8 @@
 
             var ROOM = 'chat';
             var SIGNAL_ROOM = 'signal_room';
+            var FILES_ROOM = 'files';
+
             var configuration = {
                 'iceServers': [{
                     'url': 'stun:stun.l.google.com:19302'
@@ -56,12 +58,18 @@
                 ordered: false, // no guaranteed delivery, unreliable but faster
                 maxRetransmitTime: 1000, // miliseconds
             };
+
             var dataChannel;
+            var receivedFileName;
+            var receivedFileSize;
+            var fileBuffer = [];
+            var fileSize = 0;
 
             io = io.connect();
             io.emit('ready', {
                 'chat_room': ROOM,
-                'signal_room': SIGNAL_ROOM
+                'signal_room': SIGNAL_ROOM,
+                'files_room': FILES_ROOM
             });
 
             // Send a first signaling message to anyone listening
@@ -93,6 +101,13 @@
                         rtcPeerConn.addIceCandidate(new RTCIceCandidate(message.candidate));
                     }
                 }
+            });
+
+            io.on('files', function (data) {
+                receivedFileName = data.filenime;
+                receivedFileSize = data.filesize;
+
+                displaySignalMessage("websocket says the file on it's way is " + receivedFileName + " (" + receivedFileSize + ")");
             });
 
             function startSignaling() {
@@ -135,7 +150,7 @@
                 navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
 
                 navigator.getUserMedia({
-                    'audio': true,
+                    'audio': false, // temporary, must be true
                     'video': {
                         mandatory: {
                             minWidth: 320,
@@ -169,6 +184,19 @@
                 displayMessage('From DataChannel: ' + event.data);
 
                 // This is where we process incoming files
+                fileBuffer.push(event.data);
+                fileSize += event.data.byteLength;
+                fileProgress.value = fileSize;
+
+                // Provide link to downloadable file when complete
+                if (fileSize === receivedFileSize) {
+                    var received = new window.Blob(fileBuffer);
+                    fileBuffer = [];
+
+                    downloadLink.href = URL.createObjectURL(received);
+                    downloadLink.download = receivedFileName;
+                    downloadLink.appendChild(document.createTextNode(receivedFileName + '(' + fileSize + ') bytes'));
+                }
             }
 
             function sendLocalDesc(desc) {
@@ -205,6 +233,39 @@
 
                 // dataChannel.send(myName.value + ' says ' + myMessage.value);
                 ev.preventDefault();
+            }, false);
+
+            sendFile.addEventListener('change', function (ev) {
+                var file = sendFile.files[0];
+
+                displaySignalMessage('sending file ' + file.name + ' (' + file.size + ')...');
+
+                io.emit('files', {
+                    'filename': file.name,
+                    'filesize': file.size,
+                    'room': FILES_ROOM
+                });
+
+                fileProgress.max = file.size;
+                var chunkSize = 16384;
+                var sliceFile = function (offset) {
+                    var reader = new window.FileReader();
+                    reader.onload = (function () {
+                        return function (e) {
+                            dataChannel.send(e.target.result);
+
+                            if (file.size > offset + e.target.result.byteLength) {
+                                window.setTimeout(sliceFile, 0, offset + chunkSize);
+                            }
+
+                            fileProgress.value = offset + e.target.result.byteLength;
+                        };
+                    })(file);
+
+                    var slice = file.slice(offset, offset + chunkSize);
+                    reader.readAsArrayBuffer(slice);
+                };
+                sliceFile(0);
             }, false);
 
             function displayMessage(message) {
